--- a/starting/index.html
+++ b/starting/index.html
@@ -10,16 +10,25 @@
         <div class="color_section">
             <h2>Colors</h2>
             <p>These are my various color examples:</p>
+            <div id="color_1"></div>
+            <div id="color_2"></div>
+            <div id="color_3"></div>
         </div>
         <hr>
         <div class="font_section">
             <h2>Fonts</h2>
             <p>These are my various font examples:</p>
+            <div id="font_1"><p>The quick brown fox jumped over the lazy poodle.</p></div>
+            <div id="font_2"><p>The quick brown fox jumped over the lazy poodle.</p></div>
+            <div id="font_3"><p>The quick brown fox jumped over the lazy poodle.</p></div>
         </div>
         <hr>
         <div class="textStyle_section">
             <h2>Text Styles</h2>
             <p>These are my various text style examples:</p>
+            <div id="textStyle_1"><p>The quick brown fox jumped over the lazy poodle.</p></div>
+            <div id="textStyle_2"><p>The quick brown fox jumped over the lazy poodle.</p></div>
+            <div id="textStyle_3"><p>The quick brown fox jumped over the lazy poodle.</p></div>
         </div>
 
     </body>
