Modified CSS of examples

--- a/starting/index.html
+++ b/starting/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Website Design System</title>
-        <link href="/starting/styles.css">
+        <link rel="stylesheet" href="/starting/styles.css">
     </head>
     <body>
         <h1>My Website Design System</h1>
