finished the colors section

--- a/starting/index.html
+++ b/starting/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+<!DOCTYPE html5>
 <html>
     <head>
         <title>Website Design System</title>
-        <link rel="stylesheet" href="/starting/styles.css">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1>My Website Design System</h1>
@@ -10,9 +10,10 @@
         <div class="color_section">
             <h2>Colors</h2>
             <p>These are my various color examples:</p>
-            <div id="color_1"></div>
-            <div id="color_2"></div>
-            <div id="color_3"></div>
+            <div id="color_1"><span>Slytherin</span></div>
+            <div id="color_2"><span>Ravenclaw</span></div>
+            <div id="color_3"><span>Gryffindor</span></div>
+            <div id="color_4"><span>Hufflepuff</span></div>
         </div>
         <hr>
         <div class="font_section">
