Added font families and examples

--- a/starting/index.html
+++ b/starting/index.html
@@ -19,10 +19,24 @@
         <div class="font_section">
             <h2>Fonts</h2>
             <p>These are my various font examples:</p>
-            <div id="font_1"><p>The quick brown fox jumped over the lazy poodle.</p></div>
-            <div id="font_2"><p>The quick brown fox jumped over the lazy poodle.</p></div>
-            <div id="font_3"><p>The quick brown fox jumped over the lazy poodle.</p></div>
+            <div id="font_1">
+                <h3>Open Sans</h3>
+                <p class="openSans">The quick brown fox jumped over the lazy poodle.</p>
+                <p class="openSans_italic">The quick brown fox jumped over the lazy poodle.</p>
+                <p class="openSans_bold">The quick brown fox jumped over the lazy poodle.</p>
+            </div>
+            <div id="font_2">
+                <h3>Roboto</h3>
+                <p class="roboto">The quick brown fox jumped over the lazy poodle.</p>
+                <p class="roboto_italic">The quick brown fox jumped over the lazy poodle.</p>
+                <p class="roboto_bold">The quick brown fox jumped over the lazy poodle.</p>
+            </div>
+            <div id="font_3">
+                <h3>Zen Dots</h3>
+                <p class="zenDots">The quick brown fox jumped over the lazy poodle.</p>
+            </div>
         </div>
+        <br>
         <hr>
         <div class="textStyle_section">
             <h2>Text Styles</h2>
