made minor cosmetic changes

--- a/starting/index.html
+++ b/starting/index.html
@@ -41,27 +41,34 @@
         <div class="textStyle_section">
             <h2>Text Styles</h2>
             <p>These are my various text style examples:</p>
+            <br>
             <h3>Main Heading:</h3>
             <div id="textStyle_1"><h1>Breaking News!</h1></div>
-            <ul>
-                <li>Font-Size: 60px</li>
-                <li>Font-Weight: 600</li>
-                <li>Font-Family: Roboto</li>
-            </ul>
+                <div class="center_ul">
+                <ul>
+                    <li>Font-Size: 60px</li>
+                    <li>Font-Weight: 600</li>
+                    <li>Font-Family: Roboto</li>
+                </ul>
+                </div>
             <h3>Subheadings:</h3>
             <div id="textStyle_2"><h2>Man breaks world pie-eating record!</h2></div>
-            <ul>
-                <li>Font-Size: 40px</li>
-                <li>Font-Weight: 400</li>
-                <li>Font-Family: Zen Dots</li>
-            </ul>
+            <div class="center_ul">    
+                <ul>
+                    <li>Font-Size: 40px</li>
+                    <li>Font-Weight: 400</li>
+                    <li>Font-Family: Zen Dots</li>
+                </ul>
+            </div>
             <h3>Paragraph Text:</h3>
             <div id="textStyle_3"><p>Boy I wish I knew where they put all that pie!</p></div>
-            <ul>
-                <li>Font-Size: 20px</li>
-                <li>Font-Weight: 400</li>
-                <li>Font-Family: Open Sans</li>
-            </ul>
+            <div class="center_ul">    
+                <ul>
+                    <li>Font-Size: 20px</li>
+                    <li>Font-Weight: 400</li>
+                    <li>Font-Family: Open Sans</li>
+                </ul>
+            </div>
         </div>
 
     </body>
